remove after_success in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ matrix:
 #   # push coverage results to Codecov
 #   - julia -e 'using Pkg; cd(Pkg.dir("State")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 #
-after_success:
-- julia -e 'using Pkg; cd(Pkg.dir("State")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+# after_success:
+# - julia -e 'using Pkg; cd(Pkg.dir("State")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
